[metadata]
author = Jeffrey Finkelstein
author_email = jeffrey.finkelstein@gmail.com
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Games/Entertainment
description = A command-line program that prints rhyming phrases.
download_url = https://pypi.python.org/pypi/rumbleinthejungle
license = GNU GPLv3+
name = rumbleinthejungle
platforms = any
url = https://github.com/jfinkels/rumbleinthejungle
version = 0.0.2-dev

[options]
install_requires = pronouncing
include_package_data = True
packages = rumbleinthejungle
test_suite = tests
